[package]
name = "pinball"
version = "0.1.0"
edition = "2021"
description = "Simple maze game using Bevu and Rapier"
repository = "https://github.com/Dalvany/maze"
keywords = ["pinball", "game", "3d", "bevy", "rapier"]
categories = ["games"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release-wasm]
inherits = "release"
opt-level = 'z'
lto = "thin"

[features]
full-debug = ["debug", "camera"]
debug = ["diagnostic", "inspector", "bevy_rapier3d/debug-render-3d"]
inspector = ["dep:bevy-inspector-egui"]
diagnostic = []
camera = ["dep:bevy_panorbit_camera"]

[dependencies]
bevy = "0.11"
bevy_rapier3d = "0.22"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
bevy-inspector-egui = { version = "0.19", optional = true }
bevy_panorbit_camera = { version = "0.8", optional = true }
